poe.trade stats wrapping fix

--- a/style.css
+++ b/style.css
@@ -309,8 +309,11 @@ input {
 
 .item-stats {
     color: rgba(0, 200, 200, 1);
-    padding-top: 10px;
-     display: none;
+    padding-top: 5px;
+    display: none;
+    word-wrap: break-word;
+    /* display: block; */
+    line-height: 15px;
 }
 
 .poe-trade-link, .poe-ninja-link, .poe-rates-link, .poe-wiki-link {
